--- a/vue3 완벽 마스터/vue3-posts/package.json
+++ b/vue3 완벽 마스터/vue3-posts/package.json
@@ -8,10 +8,12 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "db": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "vue": "^3.5.13",
@@ -23,6 +25,7 @@
     "@vue/eslint-config-prettier": "^10.1.0",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
+    "json-server": "^0.17.4",
     "prettier": "^3.3.3",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5"
